--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+		"Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+html {
+	height: 100vh;
+	width: 100vw;
+	margin: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+
+.logBtn {
+	border: 0.5px solid black;
+	background: linear-gradient(45deg, rgb(22, 181, 235), rgb(190, 18, 190));
+	width: 150px;
+	height: 25px;
+}
+
+.logBtn:hover {
+	border: 1px solid rgb(226, 240, 31);
+	background: linear-gradient(45deg, rgb(22, 181, 235), rgb(190, 18, 190));
+	width: 150px;
+	height: 25px;
+	margin: 0em;
+	padding: 1px 6px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
